package org.dp.core.factory.abstractFactory.bean;

public class Candy extends Food {
}
