package org.dp.core.factory.abstractFactory.bean;

public class Car extends Vehicle {
}
