package org.dp.core.factory.abstractFactory.bean;

import org.dp.core.factory.abstractFactory.bean.Weapon;

public class Gun extends Weapon {
}
