package org.dp.core.factory.abstractFactory.bean;

public abstract class Weapon {
}
